[gd_scene load_steps=3 format=2]

[ext_resource path="res://EnemyRelated/TowerInteractingRelated/TowerInteractingModules/TowerDetectingRangeModule.gd" type="Script" id=1]


[sub_resource type="CircleShape2D" id=1]
radius = 0.01

[node name="TowerDetectingRangeModule" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="CollShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_TowerDetectingRangeModule_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_TowerDetectingRangeModule_area_exited"]
